# libaeon

./: .clang-format  .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  bootstrap.cmd  bootstrap.sh  bootstrap32.cmd  bootstrap_local.sh  bootstrap_vs2015.cmd  bootstrap_win32.cmd  bootstrap_xcode.sh  build.sh  clang_format.sh  conanfile.py  dependencies.txt  graphviz_deps.cmd  remotes.txt
src/: CMakeLists.txt
src/aeon/: curl.h  filesystem.h  hdf5.h  logger.h  math.h  midi.h  mono.h  platform.h  sockets.h  streams.h  testing.h  utility.h  webserver.h
src/aeon/common/: endianness.h  optional.h  singleton.h  string.cpp  string.h  string_traits.h  variant.h
src/aeon/curl/: easy_wrapper.cpp  easy_wrapper.h  exceptions.h  global_wrapper.cpp  global_wrapper.h  url_downloader.cpp  url_downloader.h
src/aeon/filesystem/: filesystem.cpp  filesystem.h
src/aeon/hdf5/: hdf5_dataset.h  hdf5_dataset_impl.h  hdf5_dataset_properties.h  hdf5_dataset_properties_impl.h  hdf5_dataset_wrapper.h  hdf5_dataset_wrapper_impl.h  hdf5_dataspace.h  hdf5_dataspace_impl.h  hdf5_datatype.h  hdf5_datatype_impl.h  hdf5_file.h  hdf5_file_impl.h  hdf5_object.h  hdf5_object_impl.h  hdf5_object_iterator.h  hdf5_object_iterator_impl.h  hdf5_scoped_create_group.h  hdf5_scoped_create_group_impl.h
src/aeon/logger/: base_backend.h  io_stream_sink.h  log_level.h  log_sink.h  logger.h  multithreaded_sink_backend.h  simple_backend.h  simple_sink_backend.h  stream_sink.h
src/aeon/math/: perlin_noise.cpp  perlin_noise.h  simplex_noise.cpp  simplex_noise.h
src/aeon/midi/: midi_device.cpp  midi_device.h  midi_file_reader.cpp  midi_file_reader.h  midi_input_device.cpp  midi_input_device.h  midi_input_manager.cpp  midi_input_manager.h  midi_messages.h  midi_output_device.cpp  midi_output_device.h
src/aeon/mono/: mono_assembly.cpp  mono_assembly.h  mono_build_config.h.in  mono_class.cpp  mono_class.h  mono_class_instance.cpp  mono_class_instance.h  mono_exception.h  mono_gchandle.cpp  mono_gchandle.h  mono_jit.cpp  mono_jit.h  mono_method.cpp  mono_method.h  mono_object.cpp  mono_object.h  mono_string.cpp  mono_string.h
src/aeon/platform/: compilers.h  platform.h  term_colors.h
src/aeon/sockets/: config.h  line_protocol_handler.h  tcp_server.h
src/aeon/streams/: access_mode_mixin.h  circular_buffer_stream.h  config.h  file_stream.cpp  file_stream.h  file_stream_fwd.h  io_stream.cpp  io_stream.h  io_stream_colors_mixin.cpp  io_stream_colors_mixin.h  memory_stream.h  stream.h  stream_fwd.h  stream_name_mixin.h  stream_reader.h  stream_writer.h
src/aeon/testing/: temporary_file_fixture.cpp  temporary_file_fixture.h
src/aeon/utility/: asynchronizer.h  bitflags.h  configfile.cpp  configfile.h  container.h  dispatcher.h  endianness.h  hexdump.cpp  hexdump.h  linear_map.h  listener_subject.h  literals.h  noncopyable.h  optional.h  parallelizer.h  parameters.h  signals.h  singleton.h  string.cpp  string.h  string_traits.h  timer.cpp  timer.h  variant.h
src/aeon/webserver/: http_protocol_handler.cpp  http_protocol_handler.h  http_request.cpp  http_request.h
src/ast/: CMakeLists.txt  prerequisites.cmake
src/ast/private/: basic_printer.cpp
src/ast/src/: basic_printer.cpp
src/ast/tests/: CMakeLists.txt
src/chrono/: CMakeLists.txt  dependencies.txt
src/chrono/private/: calendar.cpp  timezone.cpp  timezone_impl.h
src/chrono/src/: calendar.cpp  timezone.cpp  timezone_impl.h
src/chrono/tests/: CMakeLists.txt
src/clang/: CMakeLists.txt  dependencies.txt  prerequisites.cmake
src/clang/private/: ast_entity_visitor.cpp  ast_parser.cpp  parser_settings.cpp  string.cpp  visitor.cpp
src/clang/src/: ast_entity_visitor.cpp  clang_index.h  (+11 more)
src/common/: CMakeLists.txt
src/compression/: CMakeLists.txt  dependencies.txt  prerequisites.cmake
src/crypto/: CMakeLists.txt  prerequisites.cmake
src/curl/: CMakeLists.txt  easy_wrapper.cpp  global_wrapper.cpp  url_downloader.cpp
src/file_container/: CMakeLists.txt  prerequisites.cmake
src/filesystem/: CMakeLists.txt  filesystem.cpp
src/fonts/: CMakeLists.txt  dependencies.txt  prerequisites.cmake
src/gl/: CMakeLists.txt  dependencies.txt  prerequisites.cmake
src/gl_utils/: CMakeLists.txt  gl_utils_settings.h.in  prerequisites.cmake
src/hdf5/: CMakeLists.txt
src/imaging/: CMakeLists.txt  dependencies.txt  prerequisites.cmake
src/logger/: CMakeLists.txt  prerequisites.cmake
src/math/: CMakeLists.txt  perlin_noise.cpp  simplex_noise.cpp
src/midi/: CMakeLists.txt  dependencies.txt  prerequisites.cmake
src/mono/: CMakeLists.txt  dependencies.txt  mono_assembly.cpp  mono_build_config.h.in  mono_class.cpp  mono_class_instance.cpp  mono_gchandle.cpp  mono_jit.cpp  mono_method.cpp  mono_object.cpp  mono_string.cpp  prerequisites.cmake
src/platform/: CMakeLists.txt  prerequisites.cmake
src/plugin/: loaded_plugin.cpp  platform.h  plugin_handle.cpp  plugin_loader.cpp
src/plugins/: CMakeLists.txt  prerequisites.cmake
src/ptree/: CMakeLists.txt  prerequisites.cmake
src/rdp/: CMakeLists.txt
src/reflection/: CMakeLists.txt  dependencies.txt  prerequisites.cmake  reflection_path.h.in
src/reflection_support/: CMakeLists.txt  reflection_support_path.h.in
src/serial/: CMakeLists.txt  prerequisites.cmake
src/sockets/: CMakeLists.txt  dependencies.txt  prerequisites.cmake
src/streams/: CMakeLists.txt  dependencies.txt  file_stream.cpp  io_stream.cpp  io_stream_colors_mixin.cpp  prerequisites.cmake
src/test/: runner.cpp
src/testing/: CMakeLists.txt  temporary_file_fixture.cpp
src/tracelog/: CMakeLists.txt  prerequisites.cmake
src/types/: CMakeLists.txt
src/unicode/: CMakeLists.txt  dependencies.txt  prerequisites.cmake
src/utility/: CMakeLists.txt  configfile.cpp  hexdump.cpp  prerequisites.cmake  string.cpp  timer.cpp
src/variant/: CMakeLists.txt  prerequisites.cmake
src/vulkan/: CMakeLists.txt  dependencies.txt  prerequisites.cmake
src/web/: CMakeLists.txt  dependencies.txt  prerequisites.cmake
src/webserver/: http_request.cpp
(+1598 files in other folders)
